Add 1-page abstract

--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,1 +1,23 @@
-\davidnote{Todo: abstract}
+Investigations into \td{} network\--forming materials have renewed importance due to the experimental synthesis of ultra\--thin films of carbon, silica and aluminosilicate glasses.
+Microscopy on the disordered phases of these materials reveals a percolating ring structure, identifying them as candidates for range of technologically useful materials, with applications including catalysis and gas separation.
+The ability to characterise, understand and control the structure of the pore landscape in such materials is therefore central to their further development.
+
+The overall aim of this thesis is to improve the simulation and characterisation of \td{} disordered materials.
+The key is to accurately quantify and reproduce the ring structure, described by the ring size distribution and ring\--ring correlations.
+This will be achieved by relating previous empirical laws (namely \lm's law and the \aw{} law), to well\--defined metrics in network science, and developing a variety of \mc{} methods to generate networks with controllable ring structure and topologies.
+
+The first of these methods will be a sequential growth algorithm to construct triangle rafts (a proxy for silica bilayers), which will be shown to produce configurations commensurate with those from experiment.
+Following from this, a modified bond switching algorithm will be used to investigate more generic systems, spanning a variety of atomic coordination environments, potential models and topologies. 
+Fundamental relationships between these measures and the ring structure will be demonstrated by systematically varying the system parameters.
+In addition, hard particle \mc{} techniques will be used to generate Voronoi diagrams, making contact with experimental studies on quasi\--\td{} colloidal systems.
+
+Treating these diverse physical systems as complex networks allows a generalised network theory to be developed.
+Traditional ring measures will be related to well\--defined metrics from network theory, namely the node degree distribution and the assortativity.
+This will enable seemingly disparate physical systems to be compared and ties them into the wider field of network science.
+
+Further applications of this work to real systems will be illustrated with analyses on a range of experimental (or experimentally motivated) data.
+The appropriateness of weighted and unweighted Voronoi constructions will be evaluated for colloidal monolayers.
+The ring structure of procrystalline lattices will be demonstrated to be related to the underlying parent lattice and atomic coordination environments.
+Finally, a tool from topological data analysis, termed persistent homology, will be investigated and shown to be a potential complement to more traditional measures of structural disorder.
+
+%\textbf{Keywords}: Network theory, Monte Carlo methods, silica bilayers, colloidal monolayers, procrystalline lattices, Voronoi diagrams, persistent homology
