--- a/text/ph.tex
+++ b/text/ph.tex
@@ -1,3 +1,4 @@
+\addtocontents{toc}{\protect\newpage}
 \chapter[Persistent Homology for Amorphous Materials]{Persistent Homology for \\ Amorphous Materials}
 \label{ch:ph}
 
