--- a/thesis.tex
+++ b/thesis.tex
@@ -129,21 +129,21 @@
 % The level that shows up in the ToC:
 \setcounter{tocdepth}{2}
 
-
-%%%%% ABSTRACT SEPARATE
-% This is used to create the separate, one-page abstract that you are required to hand into the Exam
-% Schools.  You can comment it out to generate a PDF for printing or whatnot.
-%\begin{abstractseparate}
-%	\input{text/abstract} % Create an abstract.tex file in the 'text' folder for your abstract.
-%\end{abstractseparate}
-
-
 % JEM: Pages are roman numbered from here, though page numbers are invisible until ToC.  This is in
 % keeping with most typesetting conventions.
 \begin{romanpages}
 
 % Title page is created here
 \maketitle
+
+%%%%% ABSTRACT SEPARATE
+% This is used to create the separate, one-page abstract that you are required to hand into the Exam
+% Schools.  You can comment it out to generate a PDF for printing or whatnot.
+\begin{abstractseparate}
+	\input{text/abstract} % Create an abstract.tex file in the 'text' folder for your abstract.
+\end{abstractseparate}
+
+
 
 %%%%% DEDICATION -- If you'd like one, un-comment the following.
 %\begin{dedication}
@@ -158,9 +158,9 @@
 %\end{acknowledgements}
 
 %%%%% ABSTRACT -- Nothing to do here except comment out if you don't want it.
-\begin{abstract}
-	\input{text/abstract}
-\end{abstract}
+%\begin{abstract}
+%	\input{text/abstract}
+%\end{abstract}
 
 %%%%% Publications
 \begin{publications}
